# official-monty

./: .gitignore  Cargo.toml  Makefile  build.rs
crates/train-policy/: Cargo.toml
crates/train-policy/src/: main.rs  model.rs
crates/train-value/: Cargo.toml
crates/train-value/src/: main.rs
datagen/src/: thread.rs
datagen/src/dataformat/: binpack.rs
src/: ataxx.rs  chess.rs  datagen.rs  lib.rs  main.rs  maths.rs  mcts.rs  networks.rs  tree.rs  uai.rs  uci.rs  util.rs
src/chess/: board.rs  frc.rs
src/datagen/: dest.rs  format.rs  thread.rs
src/mcts/: helpers.rs  iteration.rs  params.rs
src/networks/: accumulator.rs  activation.rs  conv.rs  layer.rs  policy.rs  residual.rs  threats.rs  value.rs
src/networks/policy/: align.rs  autovec.rs  avx2.rs  inputs.rs  threats.rs
src/networks/value/: accumulator.rs  autovec.rs  avx2.rs
src/tree/: edge.rs  half.rs  hash.rs  node.rs
train/: Cargo.toml
train/policy/src/: arch.rs  chess.rs  lib.rs  loader.rs  main.rs
train/src/: inputs.rs  loader.rs  main.rs  moves.rs  preparer.rs
train/value/: Cargo.toml
train/value/src/: arch.rs  lib.rs  loader.rs  main.rs
train/value/src/arch/: bitboard_layer.rs  linear_comb.rs  one_hot_layer.rs  softmax.rs  sparse_softmax.rs
