[package]
name = "monty"
version = "1.0.0"
edition = "2021"
authors = ["Jamie Whiting"]
rust-version = "1.83"

[profile.release]
panic = 'abort'
strip = true
lto = true
codegen-units = 1

[dependencies]
goober = { git = 'https://github.com/jw1912/goober.git' }
rand = "0.8.5"
rand_distr = "0.4.3"

[workspace]
members = ["train"]
