[package]
name = "train-policy"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "train-policy"

[dependencies]
acyclib = { package = "acyclib", git = 'https://github.com/jw1912/bullet', rev = "e5f65c43050f3c864d7f1e8af944bc5fbdebcbb6" }
bullet_cuda_backend = { package = "bullet_cuda_backend", git = 'https://github.com/jw1912/bullet', rev = "e5f65c43050f3c864d7f1e8af944bc5fbdebcbb6" }
montyformat = { workspace = true }
monty = { workspace = true }
