[package]
name = "train-value"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
default-run = "train-value"

[features]
default = ["cuda"]
cpu = ["bullet_lib/cpu"]
cuda = ["bullet_lib/cuda"]
hip = ["bullet_lib/hip"]

[dependencies]
bullet_lib = { package = "bullet_lib", git = 'https://github.com/jw1912/bullet', default-features = false, rev = "e5f65c43050f3c864d7f1e8af944bc5fbdebcbb6" }
montyformat = { workspace = true }
monty = { workspace = true }
